Agregar responsive design

--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,7 @@
     
 body{
     font-family: 'Roboto', sans-serif;
+    word-spacing: 0.2em;
 }
 
 header{
@@ -31,8 +32,9 @@ header{
     box-sizing:border-box;
     color:red;
     display: flex;
-    justify-content:center;
     font-size: 0.8em;
+    justify-content: center;
+    margin-left: -3.1em;
     padding-top: 2em;
 }
 
@@ -42,6 +44,7 @@ header{
 }
 
 #mostrarTareas p{
+    font-size: 0.9em;
     margin: 1.5em 1em;
 }
 
