--- a/css/mediaQueries.css
+++ b/css/mediaQueries.css
@@ -5,7 +5,8 @@
         margin-right: 10em;
     }
     h1{
-        margin-left: -3em;
+        margin-left: -2em;
+        font-size: 2.5em;
     }
     #insertarTexto{
         margin-left: 0.9em;
@@ -14,7 +15,10 @@
         padding-right: 0.6em;
     }
     .letra_pequeña{
-        margin-left: -4em;
-        font-size: 1em;
+        margin-left: -2em;
+        font-size: 0.9em;
+    }
+    #introducir{ 
+        align-items: stretch;
     }
 }
